@@ -1,5 +1,9 @@
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* Thumb.cs: Fixed DragDelta raising.
+
+2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ButtonBase.cs: Added a FIXME.
 
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
